# ns3-oran

./: .gitignore
e2sim-kpmv3/: README.md
e2sim-kpmv3/e2sim/e2sm_examples/kpm_e2sm/: Dockerfile
e2sim-kpmv3/e2sim/previous/ASN1c/: asn_application.c
e2sim-kpmv3/e2sim/previous/e2apv1sim/: encode_e2apv1.cpp
e2sim-kpmv3/e2sim/src/ASN1c/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  CGI.c  (+992 more)
mmwave-LENA-oran/: .gitignore  .gitmodules  CMakeLists.txt  README.md  cu_cp_cell3_analysis.txt  default  e2sm_rc_action_space.txt  energyfilecell2.csv  energyfilecell3.csv  energyfilecell4.csv  energyfilecell5.csv  extract_cell_level_metrics.py  extract_cell_level_metrics_future_connections.py  extract_ue_level_metrics.py  extract_ue_level_metrics_future_connections.py  gnbs.txt  gui_trigger.py  logging_summary.txt  ram_dashboard.py  ram_web_dashboard.py  sim_data_pusher.py  test_xapp_metrics.py  ue_position.txt  xapp_e2sm_comparison.txt  xapp_functionality_explanation.txt  xapp_metrics_analysis.txt  xapp_template.py  xapp_template_futureconnections.py
mmwave-LENA-oran/GUI/: docker-compose.yml
mmwave-LENA-oran/GUI/FlexRIC xApp GUI trigger/: stop_xApp.py  xApp_trigger.py
mmwave-LENA-oran/contrib/oran-interface/: CMakeLists.txt
mmwave-LENA-oran/contrib/oran-interface/model/: kpm-function-description.cc  kpm-indication.cc  kpm-indication.h  oran-interface.cc
mmwave-LENA-oran/scratch/: Differing_Power_Scenerio_HO.cc  Energy_Saving_with_load_balancing_scenario.cc  Energy_saving_with_cell_utilization_scenario.cc  FutureConnections4gNBScenerio.cc  orange-rf-channel-reconfiguration.cc  rf-channel-reconfiguration-scenario.cc  scenario-one.cc  scenario-three.cc  scenario-zero-with_parallel_loging.cc  scenario-zero.cc
mmwave-LENA-oran/src/antenna/: CMakeLists.txt
mmwave-LENA-oran/src/mmwave/: CMakeLists.txt
mmwave-LENA-oran/src/nr/: CMakeLists.txt  wscript
mmwave-LENA-oran/src/propagation/: CMakeLists.txt
mmwave-LENA-oran/src/sionna/: sionna_server_script.py
(+86 files in other folders)
